# synomail_ui

./: .gitignore  Aes-r_2054.eml  Aes_32.eml  README.md  bdu.eml  config.txt  config_real.txt  groups.txt  libsynomail  new_mail.xlsx  pyproject.toml  synomail_ui.py  test2.py
synology_drive_api/: calendar.py  drive.py  files.py
synomail_ui/: __init__.py  mainWindow.py  models.py
